# api

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
src/: config.py  main.py
src/daos/: article.py
src/domain/: entities.py
src/domain/daos/: article_db.py  article_web.py  user.py  user_db.py
src/domain/usecases/: get_article_usecase.py  get_articles_list_usecase.py  get_user_usecase.py  save_aricle_usecase.py  save_user_usecase.py
src/migrations/: env.py
src/migrations/versions/: 9a254e7594a8_migration.py  a6239a8319f7_article.py  d3f934a1a788_article.py  e902ef5bd300_migration.py
src/models/: __init__.py  article.py  associations.py  user.py  users.py
src/routers/: article.py  articles.py  auth.py
src/schemas/: article.py  auth.py
src/utils/: database.py  exceptions.py  init_db.py  security.py
